Add: new routes in swagger and update email function
